@@ -1,3 +1,7 @@
+2015-12-08  Nik Nyby  <nnyby@columbia.edu>
+
+	* Fix image collection on learn.columbia.edu.
+
 2015-12-02  Nik Nyby  <nnyby@columbia.edu>
 
 	* Updated mediathread-collect, containing html parsing
